# mr-bot

./: .gitignore  README.md  config.py  diff_processor.py  file_filter.py  gitlab_fetcher.py  main.py  output_generator.py  pipeline_config.yaml.example  pyproject.toml  requirements.txt  run_pipeline.py
output/: review_prompt.md
